fix 1.玩家进入服务器时同步进度列表导致服务器异常